--- a/Models/Interior/Panel/Instruments/accel/A-10-accel.ac
+++ b/Models/Interior/Panel/Instruments/accel/A-10-accel.ac
@@ -140,7 +140,7 @@ kids 0
 OBJECT poly
 name "mount"
 loc -0.0013817 0.00304341 -0.0109718
-texture "A-10-accel.rgb"
+texture "A-10-accel.png"
 crease 180.000000
 numvert 48
 0.00257575 -0.0301509 -0.0301509
@@ -496,7 +496,7 @@ kids 0
 OBJECT poly
 name "face"
 loc -0.00272614 0.00304341 -0.0109718
-texture "A-10-accel.rgb"
+texture "A-10-accel.png"
 crease 45.000000
 numvert 4
 0 -0.0262752 -0.0262752
